# PerformanceCounters

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_clang.sh  build_dependencies.bat  build_gcc.sh  dependencies.bat  dependencies.sh  install_hooks.bat  install_hooks.sh  versions.txt
.github/actions/build-test-linux/: action.yml
.github/actions/build-test-windows/: action.yml
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml
Examples/: CMakeLists.txt  InstallHello.cmake  InstallPerformanceCounters.cmake  RunExample.cmake
Examples/Usage/: CMakeLists.txt  main.cpp
Hello/: CMakeLists.txt  Hello.cpp  Hello.h
HelloTest/: CMakeLists.txt  HelloTest.cpp
NativeDeps/: CMakeLists.txt
PerformanceCounters/: CMakeLists.txt  PerformanceCounters.cpp  PerformanceCounters.h  PerformanceCountersPrivate.h  ScopedTimer.h
PerformanceCountersTest/: CMakeLists.txt  CrossModuleTest.cpp  PerformanceCountersTest.cpp
PerformanceCountersTest/DummyLib/: CMakeLists.txt  DummyLib.cpp  DummyLib.h
hooks/: pre-commit
